# MirrorMind

./: AGENTS.md  CLAUDE.md  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts  wdio.conf.mjs
.github/ISSUE_TEMPLATE/: flaky-test.yml
.github/workflows/: ci.yml
docs/: common-note-app-features.md  obsidian-v1-compatibility.md  review-learning-roadmap.md  testing-coverage.md  testing-flakiness.md  testing-roadmap.md  testing-traceability.md  v2-features-roadmap.md
scripts/: verify-windows-bundle.ps1
src/: App.css  App.regression.test.tsx  App.tsx  index.css  main.tsx  vitest.setup.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.e2e.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BuilderModeControl.tsx  MarkdownCodeEditor.test.tsx  MarkdownCodeEditor.tsx  ObsidianCallout.tsx  ObsidianNoteEmbed.test.tsx  ObsidianNoteEmbed.tsx  ObsidianPdfEmbed.test.tsx  ObsidianPdfEmbed.tsx
src/fixtures/obsidian-vault/: compatibility.md  compatibility.test.ts
src/fixtures/obsidian-vaults/: compatibility-matrix.test.ts
src/fixtures/obsidian-vaults/project-vault/: Planejamento.canvas
src/fixtures/obsidian-vaults/project-vault/.obsidian/: app.json  community-plugins.json
src/fixtures/obsidian-vaults/project-vault/.obsidian/plugins/dataview/: data.json
src/fixtures/obsidian-vaults/project-vault/Diarias/: 2026-07-14.md
src/fixtures/obsidian-vaults/project-vault/Projetos/: Roadmap.md
src/fixtures/obsidian-vaults/study-vault/.obsidian/: app.json
src/fixtures/obsidian-vaults/study-vault/Notas/: Indice.md  Quimica.md
src/lib/: ipcContract.test.ts  keyboard-shortcuts.ts  markdown-autocomplete.ts  markdown.test.ts  markdown.ts  obsidianEmbed.ts  remarkObsidianCallouts.test.ts  remarkObsidianCallouts.ts  ui-structure.ts  vault.test.ts  vault.ts  vaultWatcher.test.ts  vaultWatcher.ts
tests/e2e/: create-save-reopen.e2e.mjs  rename-move-links.e2e.mjs  run-root.mjs  run-root.test.mjs  run-windows-e2e.mjs
tests/fixtures/: ipc-contract-v1.json
